skill section mobile animation fixed

--- a/src/components/skills/skill.css
+++ b/src/components/skills/skill.css
@@ -59,3 +59,20 @@
   padding: 5px 20px;
   margin-left: 1rem;
 }
+@media (max-width: 768px) {
+  .marquee {
+    width: 100%; 
+  }
+
+  .marqueeGroup {
+    animation: none;
+    margin-left: 4rem;
+  }
+.imageGroup{
+  width: 100%;
+  margin-left: 20px;
+}
+  .imageGroup > img {
+    margin: 10px; /* Add margin to prevent overflow */
+  }
+}
